sumo/tests/netconvert/errors/xml_false_nod/options.netconvert
--xml-edge-files=%SUMO_DIST%\tests\netconvert\errors\xml_false_nod\hokkaido.edg.xml --xml-node-files=%SUMO_DIST%\tests\netconvert\errors\xml_false_nod\hokkaido2.nod.xml --output-file=output/net.net.xml
